<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="model"
        type="com.udacity.shoestore.ShoeStoreViewModel" />
</data>

    <!-- In this layout we have two columns with labels and edit text views, so I prefer to
    use Constraint layout for border line alignment and using vertical chains for both
    columns. I found guidelines useful here, as well. -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_padding"
        tools:context=".ShoeDetailFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vert_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/shoe_name_text"
            style="@style/myLabel"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/shoe_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_edit"
            app:layout_constraintEnd_toStartOf="@+id/vert_guideline"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/shoe_name_edit"
            style="@style/myEditText"
            android:hint="@string/shoe_name_edit_hint"
            android:inputType="text"
            android:maxLength="20"
            android:text="@={model.shoeToAddName}"
            app:layout_constraintBottom_toTopOf="@+id/brand_name_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/vert_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/description_edit"
            style="@style/myEditText"
            android:hint="@string/description_edit_hint"
            android:inputType="text"
            android:maxLength="30"
            android:text="@={model.shoeToAddDescription}"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/vert_guideline"
            app:layout_constraintTop_toBottomOf="@+id/size_edit" />

        <TextView
            android:id="@+id/brand_name_text"
            style="@style/myLabel"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/brand"
            app:layout_constraintBaseline_toBaselineOf="@+id/brand_name_edit"
            app:layout_constraintEnd_toStartOf="@+id/vert_guideline" />

        <EditText
            android:id="@+id/brand_name_edit"
            style="@style/myEditText"
            android:hint="@string/brand_name_edit_hint"
            android:inputType="text"
            android:maxLength="20"
            android:text="@={model.shoeToAddCompany}"
            app:layout_constraintBottom_toTopOf="@+id/size_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/vert_guideline"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_edit" />

        <TextView
            android:id="@+id/size_text"
            style="@style/myLabel"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/size"
            app:layout_constraintBaseline_toBaselineOf="@+id/size_edit"
            app:layout_constraintEnd_toStartOf="@+id/vert_guideline" />

        <EditText
            android:id="@+id/size_edit"
            style="@style/myEditText"
            android:hint="@string/size_edit_hint"
            android:inputType="number"
            android:maxLength="4"
            android:text="@={model.shoeToAddSize}"
            app:layout_constraintBottom_toTopOf="@+id/description_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/vert_guideline"
            app:layout_constraintTop_toBottomOf="@+id/brand_name_edit" />

        <TextView
            android:id="@+id/description_text"
            style="@style/myLabel"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/description"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_edit"
            app:layout_constraintEnd_toStartOf="@+id/vert_guideline" />

        <Button
            android:id="@+id/save_button"
            style="@style/myButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/horizontal_guide" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/myButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/save_button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>